--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
-@import-normalize; /* bring in normalize.css styles */
+@import-normalize;
+
+* {
+  box-sizing: border-box;
+}
 
 body {
   margin: 0;
